# VideoLister

./: .editorconfig  .gitattributes  .gitignore  .licrc  .markdownlint.yaml  .pre-commit-config.yaml  .replit  CHANGELOG.md  CODE_OF_CONDUCT.md  CODINGSTYLE.md  CONTRIBUTING.md  CONTRIBUTORS.md  Contributing.md  LICENSE  LikedVideoLister.sln  README.md  ThirdPartyLicenses.txt  VideoLister.sln  VideoLister.sln.license  global.json  global.json.license  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: blank-issue.md
.github/workflows/: codeql-analysis.yml
LikedVideoLister/: JsonCodec.cs  LikedVideoLister.csproj  VideoDownloader.cs
Python/: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
Python/tests/: VideoListTest.json  __init__.py  video_downloader_test.py
Python/video_lister/: auth_credentials.py  video.py  video_downloader.py  video_list.py
TestApp/: Program.cs  TestApp.csproj
TestApp/Properties/: Resources.Designer.cs  Resources.resx
TestGUI/: AboutDialog.cs  MainWindow.cs  MainWindow.glade  Program.cs  TestGUI.csproj
VideoLister/: AuthCredentials.cs  AuthenticationCredentials.cs  Documentation.xml  JsonCodec.cs  Options.cs  Program.cs  Video.cs  VideoDownloader.cs  VideoLister.csproj  VideoListerLibrary.csproj
VideoLister.Gui/: AboutDialog.cs  App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWindow.cs  MainWindow.glade  Program.cs  VideoLister.Gui.csproj
VideoLister.Tests/: VideoDownloaderTest.cs  VideoLister.Tests.csproj
VideoLister/docs/: AuthCredentials.xml  Video.xml  VideoDownloader.xml
VideoListerLibrary/: AuthCredentials.cs  Video.cs  VideoDownloader.cs  VideoList.cs  VideoListerLibrary.csproj
VideoListerLibrary.Coverlet.Collector/: VideoListerLibrary.Coverlet.Collector.csproj
VideoListerLibrary.Coverlet.Collector/tests/: SinglePageTest.json
VideoListerLibrary.Coverlet.MSBuild/: VideoDownloadTest.cs  VideoListerLibrary.Coverlet.MSBuild.csproj
VideoListerLibrary.Coverlet.MSBuild/tests/: VideoListTest.json  VideoListTest.json.license
VideoListerLibrary.Tests/: VideoDownloadTest.cs  VideoDownloaderTest.cs  VideoListTest.json.license  VideoListerLibrary.Tests.csproj
dotNET/: .editorconfig  README.md  VideoLister.sln
dotNET/VideoLister/: Video.cs  VideoDownloader.cs  VideoList.cs  VideoLister.csproj  VideoListerLibrary.csproj
dotNET/VideoLister.Tests/: VideoLister.Tests.csproj
tests/: video_downloader_test.py
video_lister/: __init__.py  auth_credentials.py  video.py  video_downloader.py  video_list.py
