# SPDX-FileCopyrightText: 2022 The Video Lister Contributors
#
# SPDX-License-Identifier: CC0-1.0
[tool.poetry]
name = "video-lister"
version = "1.0.0"
description = ""
authors = ["The Video Lister Contributers"]
license = "BSD-3-Clause"
packages = [{ include = "video_lister" }]
homepage = "https://github.com/TwoPizza9621536/VideoLister-Python"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP"
]

[tool.poetry.dependencies]
python = "^3.7"
google-api-python-client = "^2.37.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
coverage = "^6.3.1"
pylint = "^2.12.2"
tox = "^3.24.5"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py3{6,7,8,9,10}

[testenv]
deps =
    -r requirements.txt
    -r requirements_dev.txt
commands =
    coverage erase
    coverage -m unittest tests
    coverage report --omit='.tox/*'
    coverage html --omit='.tox/*'
"""

[build-system]
requires = ["setuptools>=60.0.0"]
build-backend = "setuptools.build_meta"
