# SPDX-FileCopyrightText: 2022 The Video Lister Contributors
#
# SPDX-License-Identifier: CC0-1.0

[metadata]
name = video-lister
description = A rewrite of the video lister library in Python.
version = 2.0.0
license = BSD-3-Clause
url = https://github.com/TwoPizza9621536/VideoLister-Python
classifiers = [
License :: OSI Approved :: BSD License
Operating System :: OS Independent
Programming Language :: Python
Programming Language :: Python :: 3
Programming Language :: Python :: 3 :: Only
Programming Language :: Python :: 3.6
Programming Language :: Python :: 3.7
Programming Language :: Python :: 3.8
Programming Language :: Python :: 3.9
Programming Language :: Python :: 3.10
]
Topic :: Internet :: WWW/HTTP

[options]
packages = find:
python_requires = 3.6 >=
install_requires =
google-api-python-client >= 2.37.0
google-auth-httplib2 >= 0.1.0
google-auth-oauthlib >= 0.4.6
setup_requires =
autopep8 >= 1.6.0
mypy >= 0.931
pylint >= 2.12.2
test_require =
coverage >= 6.3.1
tox >= 3.24.5
zip_safe = False

[options.packages.find]
exclude = tests

[flake8]
exclude = [.git, __pycache__, docs, old, build, dist]
extend-ignore = E203
max-complexity = 30
max-line-length = 79
